# GAIA-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  gaia_ai_full_system_architecture_and_project_plan.md  gpt.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: ai.py  analytics.py  auth.py  contacts.py  me.py  messages.py  profile.py  whatsapp.py  ws.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: mongo.py  postgres.py  qdrant.py  redis.py
backend/app/db/models/: __init__.py  contact.py  feedback.py  permission.py  session.py  user.py
backend/app/prompts/: judge.py  runtime.py  style_analysis.py  synthetic_chat.py  synthetic_user.py
backend/app/schemas/: ai.py  auth.py  contact.py  whatsapp.py
backend/app/services/: confidence.py  contacts_sync.py  embeddings.py  history_import.py  llm_provider.py  prompt_builder.py  style_memory.py  style_profile.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_prompts.py  test_security.py
data/: README.md  sample_pairs.jsonl
docs/: api.md  architecture.md  deployment.md  evaluation.md  prompts.md  proposal.md  related_work.md
frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
ml/: README.md  _llm.py  pyproject.toml
ml/data/synthetic/: histories.jsonl  pairs.jsonl  personas.jsonl  test.jsonl  test_raw.jsonl  train.jsonl  train_raw.jsonl  val.jsonl  val_raw.jsonl
ml/dataset/: build_jsonl.py
ml/eda/: run_eda.py
ml/eval/: _baselines.py  indistinguishability.py  plots.py  relevance.py  run_all.py  style_similarity.py
ml/inference/: _loaded.py  generate.py
ml/notebooks/: 01_eda.ipynb  02_results.ipynb  _build_notebooks.py
ml/results/: eval_report.csv  eval_report.json  eval_report.md
ml/synthetic/: _diversity.py  generate_histories.py  generate_pairs.py  generate_personas.py
ml/train/: config.yaml  modal_app.py  runpod_command.sh  train_qlora.py
results/: eda_stats.json
slides/: build_slides.py  final.pptx  interim.pptx  (+1 more)
(+35 files in other folders)
