[project]
name = "gaia-ml"
version = "0.1.0"
description = "Gaia AI - synthetic data generation, fine-tuning, evaluation"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39",
    "openai>=1.50",
    "pydantic>=2.7",
    "tqdm>=4.66",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "tenacity>=9.0",
    "datasets>=3.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "trl>=0.11",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "wandb>=0.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synthetic*", "dataset*", "train*", "inference*", "eval*"]
